# asmr_dub

./: .gitattributes  .gitignore  AGENTS.md  README.md  pipeline.yaml  pyproject.toml
.codex/agents/: audio_dsp_engineer.toml  gemma_integration_engineer.toml  gpt_sovits_integration_engineer.toml  pipeline_architect.toml  qa_test_engineer.toml  script_style_engineer.toml  security_rights_reviewer.toml
asmr_dub_pipeline/: __init__.py  cli.py  config.py  gpu_memory.py  logging.py  orchestrator.py  process.py  rights.py  schemas.py
asmr_dub_pipeline/asr/: __init__.py  base.py  faster_whisper.py  mock.py  qwen_asr.py
asmr_dub_pipeline/audio/: __init__.py  duration.py  effects.py  features.py  ffmpeg.py  mixing.py  preprocess.py  quality.py  segmentation.py  separation.py  training_filter.py
asmr_dub_pipeline/config_profiles/: __init__.py
asmr_dub_pipeline/experimental_tts/: __init__.py  client.py
asmr_dub_pipeline/gemma/: __init__.py  base.py  hf_client.py  http_client.py  json_repair.py  llama_cpp_client.py  mock.py  parser.py  prompts.py  schemas.py  smoke.py  text_server.py  text_translate.py
asmr_dub_pipeline/gpt_sovits/: __init__.py  client.py  few_shot.py  refs.py  retry.py  schemas.py  server.py  smoke.py
asmr_dub_pipeline/pipeline/: __init__.py  artifacts.py  context.py  invalidation.py  manifest_io.py  runner.py  stage_readiness.py  state.py  steps.py
asmr_dub_pipeline/qc/: __init__.py  audio_qc.py  gemma_qc.py  pronunciation_qc.py  repair_plan.py  scoring.py
asmr_dub_pipeline/qwen_tts/: __init__.py  client.py
asmr_dub_pipeline/rvc/: __init__.py  client.py  webui_batch_infer.py  webui_infer.py  webui_train.py
asmr_dub_pipeline/script/: __init__.py  countdown.py  duration_rewrite.py  korean_colloquial.py  normalizer.py  (+5 more)
docs/: architecture.md  gemma_audio_preprocessing.md  model_setup.md  safety_and_rights.md  troubleshooting.md
examples/: pipeline.example.yaml  refs.example.json  run_mock_pipeline.sh  segments.example.json
refs/: refs.json
scripts/: asr_audio_folders.py  asr_audit_reports.py
tests/: README.md  conftest.py  test_asmr_mixing_qc.py  test_asr_audio_folders_script.py  test_asr_faster_whisper.py  test_asr_review_auto_resolution.py  test_asr_sparse_review.py  test_audio_qc.py  test_auto_repair_closure_contracts.py  test_auto_repair_stage.py  test_channel_aware_asr_split.py  test_cli_gpu_cleanup.py  test_countdown_routing.py  test_countdown_synth_server_cleanup.py  test_embedded_countdown_hybrid_synth.py  test_experimental_tts.py  test_ffmpeg_helpers.py  test_full_audio_batch_cli.py  test_gemma_backends.py  test_gemma_text_server.py  test_gpt_sovits_client.py  test_gpt_sovits_few_shot.py  test_gpt_sovits_server.py  test_json_repair_normalizer.py  test_ko_qc_repair_plan.py  test_korean_script_targeted.py  test_logging.py  test_mock_pipeline_e2e.py  test_numeric_phrase_renderer.py  test_numeric_render_plan.py  test_optional_real_model_smoke.py  test_orchestrator_gpu_cleanup.py  test_path_and_remote_safety.py  test_pipeline_invalidation_generation.py  test_project_config_nested.py  test_pronunciation_qc.py  test_qwen_asr_backend.py  test_qwen_tts_step.py  test_rights_cli.py  test_rvc_client.py  (+22 more)
(+53 files in other folders)
