[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asmr-dub-pipeline"
version = "0.1.0"
description = "Local-first Japanese ASMR dubbing pipeline with Gemma, GPT-SoVITS, and ffmpeg/DSP utilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "asmr-dub-pipeline contributors" }]
dependencies = [
  "pydantic>=2",
  "typer>=0.9",
  "rich>=13",
  "httpx>=0.25",
  "numpy>=1.24",
  "soundfile>=0.12",
  "PyYAML>=6",
  "jieba>=0.42.1",
  "jieba-fast>=0.53",
  "fast-langdetect>=1.0.0",
  "split-lang>=2.1.1",
  "cn2an>=0.5.24",
  "pypinyin>=0.55.0",
  "g2p-en>=2.1.0",
  "g2pk2>=0.0.3",
  "ko-pron>=1.3",
  "opencc>=1.3.0",
  "wordsegment>=1.3.1",
  "pyopenjtalk>=0.4.1",
]

[project.optional-dependencies]
asr = ["faster-whisper", "ctranslate2"]
hf = ["transformers>=4.56", "torch", "accelerate"]
separation = ["demucs", "torchcodec"]
diarization = ["pyannote.audio>=4,<5"]
dev = ["pytest>=8", "ruff>=0.5"]
qwen-asr = [
    "qwen-asr",
]
qwen = [
    "qwen-tts>=0.1.1",
]

[project.scripts]
asmr-dub = "asmr_dub_pipeline.cli:app"

[tool.uv]
conflicts = [
  [
    { extra = "qwen" },
    { extra = "qwen-asr" },
  ],
]

[tool.hatch.build.targets.wheel]
packages = ["asmr_dub_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not regression and not real_model'"
markers = [
  "contract: small default-suite tests for stable behavior and safety contracts",
  "integration: local integration tests that use mocks or tiny generated fixtures",
  "regression: historical or scenario-heavy regression tests excluded from the default suite",
  "real_model: optional smoke tests that require local model weights, servers, or external runtimes",
  "smoke: manually triggered smoke checks",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".cache", "audio", "runs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
